# maiterm

./: .cursorignore  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CHANGES.md  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.md  TODO.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  e2e.yml  release.yml  render-parity.yml  task-engine.yml
docs/: cursor-parity-design.md  fork-todo.md  forwood-setup.md  mailink-protocol.md  mesh-workspace.md  mobile-packaging.md  split-pane-performance.md
docs/adr/: 0005-task-engine-and-dispatchers.md  0006-maiterm-hotbar-provider-contract.md
scripts/: deploy-local-build.sh  e2e-remote.sh  forwood-setup.sh  install-local.sh  release.sh
scripts/launcher/: README.md  package-lock.json  package.json  tsconfig.json
scripts/launcher/docs/: keybind-hammerspoon.lua
scripts/launcher/src/: app.tsx  clone-resolver.ts  container-status.ts  fire-mode.ts  forwards.ts  index.tsx  list-mode.ts  modes.ts  task-menu.tsx
scripts/task-engine/: README.md  package-lock.json  package.json  tsconfig.json
scripts/task-engine/src/: cli.ts  graph.ts  index.ts  reader.ts  resolve-dir.ts  types.ts  variables.ts
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  about.hbs  build.rs  tauri.channel-dev.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/resources/maiterm-skill/: SKILL.md
src-tauri/src/: lib.rs
src-tauri/src/claude_code/: CLAUDE.md  codex.rs  cursor.rs  lockfile.rs  mod.rs  protocol.rs  registrar.rs  server.rs
src-tauri/src/commands/: claude_code.rs  comms.rs  editor.rs  mailink.rs  mod.rs  rail.rs  scheduler.rs  ssh_tunnel.rs  terminal.rs  window.rs  window_presets.rs  workspace.rs
src-tauri/src/comms/: mattermost.rs  mod.rs
src-tauri/src/mailink/: mirror.rs  mod.rs  transcript.rs
src-tauri/src/pty/: manager.rs  mod.rs
src-tauri/src/state/: agent_runtime.rs  app_state.rs  mod.rs  persistence.rs  scrollback_db.rs  workspace.rs
src-tauri/src/terminal/: event_proxy.rs  handle.rs  mod.rs  osc.rs  palette.rs  render.rs
src/lib/agents/: adapter.ts  descriptor.ts  resume.ts
src/lib/components/: AgentBridgePicker.svelte  AgentLinkPicker.svelte  ChangelogModal.svelte  CommsMonitorModal.svelte  ContextMenu.svelte  Icon.svelte  ImportPreviewModal.svelte  MeshCockpit.svelte  MeshSetupModal.svelte  MeshStageView.svelte  QuickOpen.svelte  ResizableTextarea.svelte  Resizer.svelte  SessionRestoreModal.svelte  ThemeEditor.svelte  Toast.svelte  Tooltip.svelte  WindowPresetSaveModal.svelte  WindowPresetsManagerModal.svelte
src/lib/stores/: activity.svelte.ts  agentBridge.svelte.ts  agentDelivery.test.ts  agentDelivery.ts  agentLink.svelte.ts  agentMesh.svelte.ts  agentState.svelte.ts  claudeCode.svelte.ts  claudeState.svelte.ts  editorRegistry.svelte.ts  hotbar.svelte.ts  meshGraph.test.ts  meshSend.ts  (+19 more)
src/routes/: +layout.svelte  +page.svelte
tests/e2e/: LOCAL-FOCUS-AVOIDANCE-HISTORY.md  create-window.test.ts  open-tab.test.ts  osc.test.ts  package-lock.json  package.json  render-smoke.test.ts  tsconfig.json  vitest.config.ts
todo/openTab-require-devcontainer-failure/: HANDOVER.md  aiterm-app-today.log.txt  aiterm-app3-today.log.txt
update-worker/: README.md  wrangler.toml
update-worker/src/: worker.js
website/: astro.config.mjs
(+77 files in other folders)
