[package]
name = "aiterm"
version = "1.10.6"
description = "A Tauri-based terminal organizer"
authors = ["you"]
license = "LicenseRef-Proprietary"
edition = "2021"

[lib]
name = "aiterm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
portable-pty = "0.8"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
log = "0.4"
tauri-plugin-mcp-bridge = { version = "0.8", optional = true }
base64 = "0.22.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "process", "io-util"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
axum = { version = "0.8", features = ["ws"] }
rand = "0.8"
libc = "0.2"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"
sysinfo = "0.33"
alacritty_terminal = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }
ignore = "0.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
mcp-bridge = ["dep:tauri-plugin-mcp-bridge"]
